--- a/packages/kubectl/build.yaml
+++ b/packages/kubectl/build.yaml
@@ -7,6 +7,7 @@ prelude:
 
 steps:
 - | 
+   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    mkdir -p /kubectl/usr/bin && \
    curl -L https://storage.googleapis.com/kubernetes-release/release/v${PACKAGE_VERSION}/bin/linux/amd64/kubectl -o /kubectl/usr/bin/kubectl && \
    chmod +x /kubectl/usr/bin/kubectl
