Add rdepend on ncurses in vim

--- a/packages/vim/definition.yaml
+++ b/packages/vim/definition.yaml
@@ -2,6 +2,11 @@ name: vim
 category: editors
 version: "8.2.1127"
 
+requires:
+- name: ncurses
+  category: libs
+  version: ">=0"
+
 labels:
   github.repo: "vim"
   github.owner: "vim"
