--- a/packages/s6-linux-init/build.yaml
+++ b/packages/s6-linux-init/build.yaml
@@ -8,16 +8,20 @@ requires:
 - category: "init"
   name: "s6"
   version: ">=0"
+- category: "init"
+  name: "nsss"
+  version: ">=0"
 env:
 - MUSL_TARGET=x86_64-mocaccino-linux-musl
 - MUSL_ARCH=x86
 - MUSL_CPU=x86-64
-- CFLAGS="-I/include -I/usr/include -static"
-- LDFLAGS="-L/usr/lib/execline -L/usr/lib/skalibs -L/usr/lib/s6"
+- CFLAGS="-I/include -I/usr/include -I/usr/include/nsss/ -static"
+- LDFLAGS="-L/usr/lib/execline -L/usr/lib/skalibs -L/usr/lib/s6 -L/usr/lib/nsss"
 
 package_dir: /s6-linux-init
 prelude:
 - |
+   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    mkdir -p /${PACKAGE_NAME} && \
    git clone https://github.com/skarnet/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
 
