--- a/packages/mocaccino-skel/definition.yaml
+++ b/packages/mocaccino-skel/definition.yaml
@@ -1,7 +1,4 @@
 name: mocaccino-skel
 category: init
-version: "20200706.2"
+version: "20200709"
 
-labels:
-  #  github.repo: "void-runit"
-  # github.owner: "void-linux"
