--- a/packages/s6-linux-init/build.yaml
+++ b/packages/s6-linux-init/build.yaml
@@ -8,15 +8,12 @@ requires:
 - category: "init"
   name: "s6"
   version: ">=0"
-- category: "init"
-  name: "nsss"
-  version: ">=0"
 env:
 - MUSL_TARGET=x86_64-mocaccino-linux-musl
 - MUSL_ARCH=x86
 - MUSL_CPU=x86-64
-- CFLAGS="-I/include -I/usr/include -I/usr/include/nsss/ -static"
-- LDFLAGS="-L/usr/lib/execline -L/usr/lib/skalibs -L/usr/lib/s6 -L/usr/lib/nsss"
+- CFLAGS="-I/include -I/usr/include -static"
+- LDFLAGS="-L/usr/lib/execline -L/usr/lib/skalibs -L/usr/lib/s6"
 
 package_dir: /s6-linux-init
 prelude:
