--- a/packages/srv-k3s/definition.yaml
+++ b/packages/srv-k3s/definition.yaml
@@ -1,7 +1,10 @@
 name: k3s
 category: runit-srv
-version: "20200706.8"
-
+version: "20200715"
+requires:
+- name: e2fsprogs
+  category: utils
+  verison: ">=0"
 labels:
   #  github.repo: "void-runit"
   # github.owner: "void-linux"
