--- a/packages/srv-docker/definition.yaml
+++ b/packages/srv-docker/definition.yaml
@@ -1,10 +1,10 @@
 name: docker
 category: runit-srv
-version: "20200715"
+version: "20200717"
 requires:
 - name: e2fsprogs
   category: utils
-  verison: ">=0"
+  version: ">=0"
 labels:
   #  github.repo: "void-runit"
   # github.owner: "void-linux"
