--- a/packages/libpng/definition.yaml
+++ b/packages/libpng/definition.yaml
@@ -1,7 +1,10 @@
 name: png
 category: libs
 version: "1.6.35+0"
-
+requires:
+- name: zlib
+  category: libs
+  version: ">=0"
 labels:
   github.repo: "libpng"
   github.owner: "glennrp"
