--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -29,4 +29,5 @@ jobs:
         sudo mv luet /usr/bin/luet
         sudo chmod +x /usr/bin/luet
         git clone https://github.com/Luet-lab/luet-repo packages/luet-repo
+        git clone https://github.com/mocaccinoOS/mocaccino-micro packages/micro
         make validate
