--- a/packages/ncurses/build.yaml
+++ b/packages/ncurses/build.yaml
@@ -1,10 +1,14 @@
-image: "quay.io/mocaccino/micro-toolchain:latest"
+requires:
+- category: "development"
+  name: "toolchain"
+  version: ">=0"
+
 env:
 - MUSL_TARGET=x86_64-mocaccino-linux-musl
 - MUSL_ARCH=x86
 - MUSL_CPU=x86-64
 - CFLAGS="-I/include -I/usr/include -static"
-
+- LDFLAGS="-L/usr/lib -L/lib"
 package_dir: /ncurses
 prelude:
 - |
@@ -14,7 +18,8 @@ prelude:
    git clone https://github.com/mirror/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
 
 steps:
-- cd ${PACKAGE_NAME} && ./configure --prefix=/usr -enable-termcap
+- cd ${PACKAGE_NAME} && ./configure --prefix=/usr -enable-termcap --with-terminfo-dirs="/etc/terminfo:/usr/share/terminfo:/lib/terminfo:/usr/lib/terminfo" --enable-pc-files --enable-widec
 - cd ${PACKAGE_NAME} && make -j8
 - cd ${PACKAGE_NAME} && make DESTDIR=/${PACKAGE_NAME} install
 - cd ${PACKAGE_NAME} && make install
+- sh ncursesw.sh
