--- a/packages/vim/build.yaml
+++ b/packages/vim/build.yaml
@@ -7,8 +7,8 @@ env:
 - MUSL_TARGET=x86_64-mocaccino-linux-musl
 - MUSL_ARCH=x86
 - MUSL_CPU=x86-64
-- CFLAGS="-static"
-
+- CFLAGS="-I/usr/include -I/include -static"
+- CPPFLAGS="-I/usr/include -I/include -static"
 package_dir: /vim
 prelude:
 - |
@@ -16,7 +16,7 @@ prelude:
    git clone https://github.com/vim/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
 
 steps:
-- cd ${PACKAGE_NAME} && ./configure --prefix=/usr
+- cd ${PACKAGE_NAME} && ./configure --prefix=/usr --with-tlib=ncursesw
 - cd ${PACKAGE_NAME} && make -j8
 - cd ${PACKAGE_NAME} && make DESTDIR=/${PACKAGE_NAME} install
 - cd ${PACKAGE_NAME} && make install
