--- a/packages/gptfdisk/definition.yaml
+++ b/packages/gptfdisk/definition.yaml
@@ -1,7 +1,13 @@
 name: gptfdisk
 category: utils
-version: "1.0.4"
-
+version: "1.0.4+0"
+requires:
+- name: "util-linux"
+  category: "utils"
+  version: ">=0"
+- name: "musl-compat"
+  category: "system"
+  version: ">=0"
 labels:
   github.repo: "gptfdisk"
   github.owner: "samangh"
