--- a/packages/toolchain/build.yaml
+++ b/packages/toolchain/build.yaml
@@ -2,4 +2,4 @@ image: "quay.io/mocaccino/micro-toolchain:latest"
 prelude:
 - |
    luet install \
-   utils/autoconf utils/curl libs/zlib vcs/git development/automake development/pkg-config development/m4
+   utils/autoconf utils/curl development/make libs/zlib vcs/git development/automake development/pkg-config development/m4
