--- a/packages/eudev/build.yaml
+++ b/packages/eudev/build.yaml
@@ -12,13 +12,14 @@ env:
 package_dir: /eudev
 prelude:
 - |
+   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    luet install utils/autoconf development/automake development/m4 development/gperf development/pkg-config development/libtool && \
    mkdir -p /${PACKAGE_NAME} && \
    git clone https://github.com/gentoo/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
 
 steps:
 - cd ${PACKAGE_NAME} && ./autogen.sh
-- cd ${PACKAGE_NAME} && ./configure --prefix=/usr --bindir=/bin --includedir=/usr/include --libdir=/usr/lib	--with-rootlibexecdir=/lib/udev --sysconfdir=/etc --enable-static --enable-split-usr --with-rootprefix= --with-rootrundir=/run
+- cd ${PACKAGE_NAME} && ./configure --prefix=/usr  --bindir=/bin --includedir=/usr/include --libdir=/usr/lib	--with-rootlibexecdir=/lib/udev --sysconfdir=/etc --enable-static --enable-split-usr --with-rootprefix= --with-rootrundir=/run
 - cd ${PACKAGE_NAME} && make -j8
 - cd ${PACKAGE_NAME} && make DESTDIR=/${PACKAGE_NAME} install
 - cd ${PACKAGE_NAME} && make install
