--- a/packages/mocaccino-runit/definition.yaml
+++ b/packages/mocaccino-runit/definition.yaml
@@ -1,6 +1,6 @@
 name: mocaccino-runit
 category: init
-version: "0.3"
+version: "0.3+1"
 labels:
   github.repo: "runit-boot"
   github.owner: "mocaccinoOS"
