--- a/packages/void-runit/definition.yaml
+++ b/packages/void-runit/definition.yaml
@@ -1,6 +1,6 @@
 name: void-runit
 category: init
-version: "20200720"
+version: "20200720+0"
 labels:
   github.repo: "void-runit"
   github.owner: "void-linux"
