--- a/packages/eudev/build.yaml
+++ b/packages/eudev/build.yaml
@@ -7,7 +7,7 @@ env:
 - MUSL_ARCH=x86
 - MUSL_CPU=x86-64
 - CFLAGS="-I/include -I/usr/include -static"
-- LDFLAGS="-L/usr/lib/execline -L/usr/lib/skalibs"
+- LDFLAGS="-L/usr/lib"
 
 package_dir: /eudev
 prelude:
