--- a/packages/libxml2/build.yaml
+++ b/packages/libxml2/build.yaml
@@ -12,6 +12,7 @@ env:
 package_dir: /libxml2
 prelude:
 - |
+   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    luet install utils/autoconf vcs/git development/make development/automake development/m4 development/pkg-config development/libtool && \
    mkdir -p /${PACKAGE_NAME} && \
    git clone https://github.com/GNOME/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
