Don't use git checkout with eudev

--- a/packages/eudev/build.yaml
+++ b/packages/eudev/build.yaml
@@ -15,10 +15,10 @@ prelude:
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    luet install utils/autoconf development/automake development/m4 development/gperf development/pkg-config development/libtool && \
    mkdir -p /${PACKAGE_NAME} && \
-   git clone https://github.com/gentoo/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
+   wget https://dev.gentoo.org/~blueness/${PACKAGE_NAME}/${PACKAGE_NAME}-${PACKAGE_VERSION}.tar.gz -O ${PACKAGE_NAME}-${PACKAGE_VERSION}.tar.gz && \
+   tar xvf ${PACKAGE_NAME}-${PACKAGE_VERSION}.tar.gz -C ./ && mv ${PACKAGE_NAME}-${PACKAGE_VERSION} ${PACKAGE_NAME}
 
 steps:
-- cd ${PACKAGE_NAME} && ./autogen.sh
 - cd ${PACKAGE_NAME} && ./configure --prefix=/usr  --bindir=/bin --includedir=/usr/include --libdir=/usr/lib	--with-rootlibexecdir=/lib/udev --sysconfdir=/etc --enable-static --enable-split-usr --with-rootprefix= --with-rootrundir=/run
 - cd ${PACKAGE_NAME} && make -j8
 - cd ${PACKAGE_NAME} && make DESTDIR=/${PACKAGE_NAME} install
