--- a/packages/bison/definition.yaml
+++ b/packages/bison/definition.yaml
@@ -8,3 +8,7 @@ requires:
 labels:
   github.repo: "bison"
   github.owner: "akimd"
+  
+uri:
+- https://www.gnu.org/software/bison
+license: "GPL-2"
