--- a/packages/docker/definition.yaml
+++ b/packages/docker/definition.yaml
@@ -4,3 +4,7 @@ version: "19.03.12"
 labels:
   github.repo: "docker-ce"
   github.owner: "docker"
+
+uri:
+- https://dockerproject.org
+license: "Apache-2.0"
