docker-cli: Add URIs and license

--- a/packages/docker-cli/definition.yaml
+++ b/packages/docker-cli/definition.yaml
@@ -5,3 +5,7 @@ version: "19.03.12"
 labels:
   github.repo: "cli"
   github.owner: "docker"
+
+uri:
+- https://github.com/docker/cli
+license: "Apache-2.0"
