--- a/packages/dracut/definition.yaml
+++ b/packages/dracut/definition.yaml
@@ -12,3 +12,7 @@ requires:
 labels:
   github.repo: "dracut"
   github.owner: "dracutdevs"
+
+uri:
+- https://dracut.wiki.kernel.org
+license: "GPL-2"
