--- a/packages/eudev/definition.yaml
+++ b/packages/eudev/definition.yaml
@@ -5,3 +5,7 @@ version: "3.2.9+2"
 labels:
   github.repo: "eudev"
   github.owner: "gentoo"
+
+uri:
+- https://github.com/gentoo/eudev
+license: "LGPL-2.1 MIT GPL-2"
