flex: Add URIs and license

--- a/packages/flex/definition.yaml
+++ b/packages/flex/definition.yaml
@@ -5,3 +5,8 @@ version: "2.6.4"
 labels:
   github.repo: "flex"
   github.owner: "westes"
+
+uri:
+- https://flex.sourceforge.net
+- https://github.com/westes/flex
+license: "FLEX"
