jq: Add URIs and license

--- a/packages/jq/definition.yaml
+++ b/packages/jq/definition.yaml
@@ -5,3 +5,7 @@ labels:
   github.repo: "jq"
   github.owner: "stedolan"
   autobump.string_replace: '{ "jq-": "" }'
+
+uri:
+- http://stedolan.github.com/jq
+license: "MIT CC-BY-3.0"
