--- a/packages/libjpeg-turbo/definition.yaml
+++ b/packages/libjpeg-turbo/definition.yaml
@@ -5,3 +5,8 @@ version: "2.0.5+0"
 labels:
   github.repo: "libjpeg-turbo"
   github.owner: "libjpeg-turbo"
+
+uri:
+- https://libjpeg-turbo.virtualgl.org
+- https://sourceforge.net/projects/libjpeg-turbo
+license: "BSD"
