libpng: Add URIs and license

--- a/packages/libpng/definition.yaml
+++ b/packages/libpng/definition.yaml
@@ -9,3 +9,7 @@ labels:
   github.repo: "libpng"
   github.owner: "glennrp"
   autobump.string_replace: '{ "libpng-": "" }'
+
+uri:
+- http://www.libpng.org
+license: "libpng2"
