--- a/packages/ncurses/definition.yaml
+++ b/packages/ncurses/definition.yaml
@@ -5,3 +5,8 @@ version: "6.2+2"
 labels:
   github.repo: "ncurses"
   github.owner: "mirror"
+
+uri:
+- https://www.gnu.org/software/ncurses
+- https://invisible-island.net/ncurses
+license: "MIT"
