nsss: Add URIs and license

--- a/packages/nsss/definition.yaml
+++ b/packages/nsss/definition.yaml
@@ -5,3 +5,8 @@ version: "0.0.2.2"
 labels:
   github.repo: "nsss"
   github.owner: "skarnet"
+
+uri:
+- https://skarnet.org/software/nsss
+- https://github.com/skarnet/nsss
+license: "ISC"
