procps: Add URIs and license

--- a/packages/procps/definition.yaml
+++ b/packages/procps/definition.yaml
@@ -2,3 +2,7 @@ name: procps
 category: utils
 version: "3.3.16+0"
 
+uri:
+- http://procps-ng.sourceforge.net
+- https://gitlab.com/procps-ng/procps
+license: "GPL-2"
