--- a/packages/utmps/definition.yaml
+++ b/packages/utmps/definition.yaml
@@ -5,3 +5,7 @@ version: "0.0.3.2"
 labels:
   github.repo: "utmps"
   github.owner: "skarnet"
+
+uri:
+- https://skarnet.org/software/utmps/overview.html
+license: "ISC"
