vim: Add URIs and license

--- a/packages/vim/definition.yaml
+++ b/packages/vim/definition.yaml
@@ -8,3 +8,8 @@ requires:
 labels:
   github.repo: "vim"
   github.owner: "vim"
+
+uri:
+- https://vim.sourceforge.io
+- https://github.com/vim/vim
+license: "vim"
