--- a/packages/yq/definition.yaml
+++ b/packages/yq/definition.yaml
@@ -5,3 +5,9 @@ labels:
   github.repo: "yq"
   github.owner: "mikefarah"
   autobump.strategy: "release"
+
+uri:
+- https://yq.readthedocs.io
+- https://github.com/kislyuk/yq
+- https://pypi.org/project/yq
+license: "Apache-2.0"
