--- a/packages/skalibs/definition.yaml
+++ b/packages/skalibs/definition.yaml
@@ -5,3 +5,7 @@ version: "2.9.2.1"
 labels:
   github.repo: "skalibs"
   github.owner: "skarnet"
+
+uri:
+- https://www.skarnet.org/software/skalibs
+license: "ISC"
