--- a/packages/libxml2/build.yaml
+++ b/packages/libxml2/build.yaml
@@ -8,12 +8,13 @@ env:
 - MUSL_ARCH=x86
 - MUSL_CPU=x86-64
 - CFLAGS="-I/include -I/usr/include -static"
+- LUET_PACKAGES="utils/autoconf vcs/git development/make development/automake development/m4 development/pkg-config development/libtool lang/python system/musl-compat"
 
 package_dir: /libxml2
 prelude:
 - |
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
-   luet install utils/autoconf vcs/git development/make development/automake development/m4 development/pkg-config development/libtool && \
+   luet install ${LUET_PACKAGES} && \
    mkdir -p /${PACKAGE_NAME} && \
    git clone https://github.com/GNOME/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
 
