--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,16 +78,22 @@ jobs:
         #sudo luet install system/container-diff system/luet-extensions repository/mocaccino-extra
         sudo luet install system/container-diff system/luet-extensions
         sudo luet install utils/keybase-tools
+    - name: Install minio and login
+      env:
+        MINIO_API_URL: ${{ secrets.MINIO_API_URL }}
+        MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
+        MINIO_SECRET_KEY: ${{ secrets.MINIO_SECRET_KEY }}
+      run: |
+        sudo wget https://dl.min.io/client/mc/release/linux-amd64/mc -O /usr/bin/mc
+        sudo chmod +x /usr/bin/mc
+        mc alias set minio $MINIO_API_URL $MINIO_ACCESS_KEY $MINIO_SECRET_KEY
+
 
     - name: Get existing repository metadata
-      env:
-        KEYBASE_DEVICENAME: ${{ secrets.KEYBASE_DEVICENAME }}
-        KEYBASE_PAPERKEY: ${{ secrets.KEYBASE_PAPERKEY }}
-        KEYBASE_USERNAME: ${{ secrets.KEYBASE_USERNAME }}
       run: |
         mkdir $PWD/build
         chmod -R 777 $PWD/build
-        keybase-download '/keybase/public/mocaccino/extra/*.yaml' $PWD/build
+        mc mirror  --exclude '*.gz' minio/mocaccino-extra/ $PWD/build
         ls -liah $PWD/build
 
     - name: Build packages 🔧
@@ -104,11 +110,7 @@ jobs:
     - name: Update repository 🚀
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: |
-        keybase-append $PWD/build/ /keybase/public/mocaccino/extra
-      env:
-        KEYBASE_DEVICENAME: ${{ secrets.KEYBASE_DEVICENAME }}
-        KEYBASE_PAPERKEY: ${{ secrets.KEYBASE_PAPERKEY }}
-        KEYBASE_USERNAME: ${{ secrets.KEYBASE_USERNAME }}
+        mc cp --recursive $PWD/build/ minio/mocaccino-extra
 
   create-repo:
     runs-on: ubuntu-latest
@@ -135,15 +137,21 @@ jobs:
         sudo luet install system/container-diff system/luet-extensions
         sudo luet install utils/keybase-tools
 
-    - name: Get existing repository metadata
+    - name: Install minio and login
       env:
-        KEYBASE_DEVICENAME: ${{ secrets.KEYBASE_DEVICENAME }}
-        KEYBASE_PAPERKEY: ${{ secrets.KEYBASE_PAPERKEY }}
-        KEYBASE_USERNAME: ${{ secrets.KEYBASE_USERNAME }}
+        MINIO_API_URL: ${{ secrets.MINIO_API_URL }}
+        MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
+        MINIO_SECRET_KEY: ${{ secrets.MINIO_SECRET_KEY }}
+      run: |
+        sudo wget https://dl.min.io/client/mc/release/linux-amd64/mc -O /usr/bin/mc
+        sudo chmod +x /usr/bin/mc
+        mc alias set minio $MINIO_API_URL $MINIO_ACCESS_KEY $MINIO_SECRET_KEY
+
+    - name: Get existing repository metadata
       run: |
         mkdir $PWD/build
         chmod -R 777 $PWD/build
-        keybase-download '/keybase/public/mocaccino/extra/*.yaml' $PWD/build
+        mc mirror  --exclude '*.gz' minio/mocaccino-extra/ $PWD/build
         ls -liah $PWD/build
 
     #- name: Setup tmate session
@@ -158,10 +166,4 @@ jobs:
     - name: Update repository 🚀
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: |
-        keybase-append $PWD/build/ /keybase/public/mocaccino/extra
-      env:
-        KEYBASE_DEVICENAME: ${{ secrets.KEYBASE_DEVICENAME }}
-        KEYBASE_PAPERKEY: ${{ secrets.KEYBASE_PAPERKEY }}
-        KEYBASE_USERNAME: ${{ secrets.KEYBASE_USERNAME }}
-        APPEND: "false"
-
+        mc cp --recursive $PWD/build/ minio/mocaccino-extra
