--- a/packages/mottainai-agent/build.yaml
+++ b/packages/mottainai-agent/build.yaml
@@ -2,10 +2,10 @@ image: "quay.io/mocaccino/extra"
 requires:
 - category: "users"
   name: "mottainai-agent"
-  version: ">0"
+  version: ">=0"
 - category: "groups"
   name: "mottainai"
-  version: ">0"
+  version: ">=0"
 
 prelude:
 - luet install development/make lang/go vcs/git
