--- a/packages/mottainai-agent/definition.yaml
+++ b/packages/mottainai-agent/definition.yaml
@@ -4,13 +4,13 @@ version: "0.0.1_pre20200828"
 requires:
 - category: "users"
   name: "mottainai-agent"
-  version: ">0"
+  version: ">=0"
 - category: "groups"
   name: "mottainai"
-  version: ">0"
+  version: ">=0"
 - category: "container"
   name: "docker"
-  version: ">0"
+  version: ">=0"
 
 labels:
   github.repo: "MottainaiCI"
