--- a/packages/mottainai-cli/definition.yaml
+++ b/packages/mottainai-cli/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "mottainai-cli"
-version: "0.0.1_pre20200828"
+version: "0.0.1_pre20200828+1"
 labels:
   github.repo: "MottainaiCI"
   github.owner: "mottainai-cli"
