--- a/packages/mottainai-agent/build.yaml
+++ b/packages/mottainai-agent/build.yaml
@@ -9,14 +9,17 @@ requires:
 
 prelude:
 - luet install development/make lang/go vcs/git
-- git clone https://github.com/MottainaiCI/${PACKAGE_NAME}.git
+- mkdir -p go/src/github.com/MottainaiCI/ -p
+- cd go/src/github/MottainaiCI && git clone https://github.com/MottainaiCI/${PACKAGE_NAME}.git
 env:
+- GOPATH=/luetbuild/go/
 - GIT_HASH=fef9fb3d651ef9dd39655d9b3fceec2132a70fd3
 - LIB_DIR=/var/lib/mottainai
 - SRV_DIR=/srv/mottainai
 package_dir: /mottainai-agent
 steps:
 - cd ${PACKAGE_NAME} && git checkout "${GIT_HASH}" && make build
+# TODO: fix this with DESTDIR install on Makefile
 - mkdir /${PACKAGE_NAME}
 - mkdir -p /${PACKAGE_NAME}/usr/bin
 - mkdir -p /${PACKAGE_NAME}/etc/mottainai
