--- a/packages/mottainai-agent/build.yaml
+++ b/packages/mottainai-agent/build.yaml
@@ -11,13 +11,17 @@ prelude:
 - luet install development/make lang/go vcs/git
 - mkdir -p go/src/github.com/MottainaiCI/
 - cd go/src/github.com/MottainaiCI && git clone https://github.com/MottainaiCI/${PACKAGE_NAME}.git
+# turn the detached message off
+- git config --global advice.detachedHead false
 env:
 - GOPATH=/luetbuild/go/
 - GIT_HASH=fef9fb3d651ef9dd39655d9b3fceec2132a70fd3
 - LIB_DIR=/var/lib/mottainai
 - SRV_DIR=/srv/mottainai
+- GITHUB_ORG=MottainaiCI
 package_dir: /mottainai-agent
 steps:
+- go env
 - cd ${GOPATH}/src/github.com/MottainaiCI/${PACKAGE_NAME} && git checkout "${GIT_HASH}" && make build
 # TODO: fix this with DESTDIR install on Makefile
 - mkdir /${PACKAGE_NAME}
@@ -27,15 +31,17 @@ steps:
 - mkdir -p /${PACKAGE_NAME}${SRV_DIR}/build_temp
 - mkdir -p /${PACKAGE_NAME}${SRV_DIR}/build/lxc
 - mkdir -p /${PACKAGE_NAME}/lib/systemd/system
-- mv ${PACKAGE_NAME} /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME}
-- cp contrib/config/mottainai-agent.yaml.example /${PACKAGE_NAME}/etc/mottainai/mottainai-agent.yaml
-- cp contrib/config/lxc/config.yml /${PACKAGE_NAME}${SRV_DIR}/build/lxc
-- chmod a+x contrib/scripts/mottainai-lxd-cleanup-zombie-containers
-- chmod a+x contrib/scripts/mottainai-lxd-cleanup-expired-cached-images
-- cp contrib/scripts/mottainai-lxd-cleanup-zombie-containers /${PACKAGE_NAME}/usr/bin/
-- cp contrib/scripts/mottainai-lxd-cleanup-expired-cached-images /${PACKAGE_NAME}/usr/bin/
-- chown mottainai-agent:mottainai -R /${PACKAGE_NAME}${SRV_DIR}
-- chmod -R 774 /${PACKAGE_NAME}${SRV_DIR}/build/lxc
-- chmod -R 774 /${PACKAGE_NAME}${SRV_DIR}/build
-- chmod -R 774 /${PACKAGE_NAME}${SRV_DIR}/build_temp
-- cp contrib/systemd/mottainai* /${PACKAGE_NAME}/lib/systemd/system/
+- |
+  cd ${GOPATH}/src/github.com/${GITHUB_ORG}/${PACKAGE_NAME}/ && \
+  mv ${PACKAGE_NAME} /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME} && \
+  cp contrib/config/mottainai-agent.yaml.example /${PACKAGE_NAME}/etc/mottainai/mottainai-agent.yaml && \
+  cp contrib/config/lxc/config.yml /${PACKAGE_NAME}${SRV_DIR}/build/lxc && \
+  chmod a+x contrib/scripts/mottainai-lxd-cleanup-zombie-containers && \
+  chmod a+x contrib/scripts/mottainai-lxd-cleanup-expired-cached-images && \
+  cp contrib/scripts/mottainai-lxd-cleanup-zombie-containers /${PACKAGE_NAME}/usr/bin/ && \
+  cp contrib/scripts/mottainai-lxd-cleanup-expired-cached-images /${PACKAGE_NAME}/usr/bin/ && \
+  chmod -R 774 /${PACKAGE_NAME}${SRV_DIR}/build/lxc && \
+  chmod -R 774 /${PACKAGE_NAME}${SRV_DIR}/build && \
+  chmod -R 774 /${PACKAGE_NAME}${SRV_DIR}/build_temp && \
+  cp contrib/systemd/mottainai* /${PACKAGE_NAME}/lib/systemd/system/
+
