net-fs/minio-client: Bump v.20200908+1

--- a/packages/minio-client/definition.yaml
+++ b/packages/minio-client/definition.yaml
@@ -1,6 +1,6 @@
 category: "net-fs"
 name: "minio-client"
-version: "20200908"
+version: "20200908+1"
 labels:
   github.repo: "minio"
   github.owner: "minio"
