--- a/amd64/toolchain/build.yaml
+++ b/amd64/toolchain/build.yaml
@@ -3,3 +3,7 @@ prelude:
 - |
    luet install \
    utils/autoconf utils/curl development/make libs/zlib vcs/git development/automake development/pkg-config development/m4
+env:
+- MUSL_TARGET=x86_64-mocaccino-linux-musl
+- MUSL_ARCH=x86
+- MUSL_CPU=x86-64
