--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -25,9 +25,12 @@ jobs:
         git fetch --prune --unshallow
     - name: Validate 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
       run: |
-        wget https://github.com/mudler/luet/releases/download/0.7.8/luet-0.7.8-linux-amd64 -O luet
+        wget https://github.com/mudler/luet/releases/download/0.8.5/luet-0.8.5-linux-amd64 -O luet
         sudo mv luet /usr/bin/luet
         sudo chmod +x /usr/bin/luet
-        git clone https://github.com/Luet-lab/luet-repo packages/luet-repo
-        git clone https://github.com/mocaccinoOS/mocaccino-micro packages/micro
+        git clone https://github.com/Luet-lab/luet-repo multi-arch/packages/luet-repo
+        git clone https://github.com/mocaccinoOS/mocaccino-micro micro
+        # We need hardlink (symlink aren't not handled correctly by luet)
+        mv micro/multi-arch/packages multi-arch/packages/micro
+        mv micro/amd64/packages amd64/packages/micro
         make validate
