--- a/multi-arch/packages/kubectl/build.yaml
+++ b/multi-arch/packages/kubectl/build.yaml
@@ -12,5 +12,5 @@ steps:
 - | 
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    mkdir -p /kubectl/usr/bin && \
-   curl -L https://storage.googleapis.com/kubernetes-release/release/v${PACKAGE_VERSION}/bin/linux/amd64/kubectl -o /kubectl/usr/bin/kubectl && \
+   curl -L https://storage.googleapis.com/kubernetes-release/release/v${PACKAGE_VERSION}/bin/linux/${MUSL_ARCH}/kubectl -o /kubectl/usr/bin/kubectl && \
    chmod +x /kubectl/usr/bin/kubectl
