--- a/multi-arch/packages/kubectl/definition.yaml
+++ b/multi-arch/packages/kubectl/definition.yaml
@@ -1,6 +1,6 @@
 name: kubectl
 category: container
-version: "0.20.0-alpha.0"
+version: "0.20.0-alpha.0+1"
 labels:
   github.repo: "kubectl"
   github.owner: "kubernetes"
