--- a/multi-arch/packages/k3s/build.yaml
+++ b/multi-arch/packages/k3s/build.yaml
@@ -7,10 +7,12 @@ package_dir: /k3s
 
 prelude:
 - luet install libs/libressl utils/ca-certificates utils/curl libs/zlib
-
+env:
+- BINARY=k3s
 steps:
 - | 
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    mkdir -p /k3s/usr/bin && \
-   curl -L https://github.com/rancher/k3s/releases/download/v${PACKAGE_VERSION}%2Bk3s1/k3s -o /k3s/usr/bin/k3s && \
+   if [ "{MUSL_ARCH}" == "arm" ] ; then BINARY=k3s-armhf ; fi &&
+   curl -L https://github.com/rancher/k3s/releases/download/v${PACKAGE_VERSION}%2Bk3s1/${BINARY} -o /k3s/usr/bin/k3s && \
    chmod +x /k3s/usr/bin/k3s
