--- a/multi-arch/packages/docker/definition.yaml
+++ b/multi-arch/packages/docker/definition.yaml
@@ -1,6 +1,6 @@
 name: docker
 category: container
-version: "19.03.12"
+version: "19.03.12+1"
 labels:
   github.repo: "docker-ce"
   github.owner: "docker"
