--- a/multi-arch/packages/cmake/definition.yaml
+++ b/multi-arch/packages/cmake/definition.yaml
@@ -1,6 +1,6 @@
 name: cmake
 category: development
-version: "3.18.2"
+version: "3.18.2+1"
 labels:
   github.repo: "CMake"
   github.owner: "Kitware"
