--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           JSON="{\"include\":"
 
-          JSONline="$(luet tree pkglist --tree packages -o json | jq -rc '.packages')"
+          JSONline="$(luet tree pkglist --tree amd64 -t multi-arch -o json | jq -rc '.packages')"
           JSON="$JSON$JSONline"
           JSON="$JSON}"
 
