--- a/multi-arch/packages/66/build.yaml
+++ b/multi-arch/packages/66/build.yaml
@@ -25,7 +25,7 @@ package_dir: /66
 prelude:
 - |
    mkdir -p /${PACKAGE_NAME} && \
-   git clone https://framagit.org/Obarun/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
+   git clone https://framagit.org/Obarun/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION%\+*}
 
 steps:
 - cd ${PACKAGE_NAME} && ./configure
