--- a/multi-arch/packages/execline/definition.yaml
+++ b/multi-arch/packages/execline/definition.yaml
@@ -1,11 +1,9 @@
 name: execline
+version: 2.6.1.0+2
 category: lang
-version: "2.6.1.0+1"
-
-labels:
-  github.repo: "execline"
-  github.owner: "skarnet"
-
 uri:
 - https://www.skarnet.org/software/execline
-license: "ISC"
+license: ISC
+labels:
+  github.owner: skarnet
+  github.repo: execline
