--- a/multi-arch/packages/nsss/definition.yaml
+++ b/multi-arch/packages/nsss/definition.yaml
@@ -1,12 +1,10 @@
 name: nsss
+version: 0.0.2.2+2
 category: init
-version: "0.0.2.2+1"
-
-labels:
-  github.repo: "nsss"
-  github.owner: "skarnet"
-
 uri:
 - https://skarnet.org/software/nsss
 - https://github.com/skarnet/nsss
-license: "ISC"
+license: ISC
+labels:
+  github.owner: skarnet
+  github.repo: nsss
