--- a/multi-arch/packages/s6/build.yaml
+++ b/multi-arch/packages/s6/build.yaml
@@ -13,7 +13,7 @@ package_dir: /s6
 prelude:
 - |
    mkdir -p /${PACKAGE_NAME} && \
-   git clone https://github.com/skarnet/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
+   git clone https://github.com/skarnet/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION%\+*}
 
 steps:
 - cd ${PACKAGE_NAME} && ./configure
