--- a/multi-arch/packages/s6/definition.yaml
+++ b/multi-arch/packages/s6/definition.yaml
@@ -1,7 +1,6 @@
 name: s6
+version: 2.9.2.0+2
 category: init
-version: "2.9.2.0+1"
-
 labels:
-  github.repo: "s6"
-  github.owner: "skarnet"
+  github.owner: skarnet
+  github.repo: s6
