--- a/multi-arch/packages/vim/build.yaml
+++ b/multi-arch/packages/vim/build.yaml
@@ -10,7 +10,7 @@ package_dir: /vim
 prelude:
 - |
    mkdir -p /${PACKAGE_NAME} && \
-   git clone https://github.com/vim/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION}
+   git clone https://github.com/vim/${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build v${PACKAGE_VERSION%\+*}
 
 steps:
 - cd ${PACKAGE_NAME} && ./configure --prefix=/usr --with-tlib=ncursesw
