--- a/multi-arch/packages/bison/build.yaml
+++ b/multi-arch/packages/bison/build.yaml
@@ -6,6 +6,7 @@ requires:
 package_dir: /bison
 prelude:
 - | 
+   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    luet install utils/autoconf utils/curl libs/zlib vcs/git development/automake development/pkg-config development/m4 \
    development/make system/musl-toolchain && \
    luet install libs/gettext-tools && \
