--- a/multi-arch/packages/openssh/build.yaml
+++ b/multi-arch/packages/openssh/build.yaml
@@ -14,7 +14,8 @@ prelude:
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    luet install utils/autoconf development/make development/automake vcs/git development/m4 libs/libressl && \
    mkdir -p /${PACKAGE_NAME} && \
-   git clone https://github.com/${PACKAGE_NAME}/${PACKAGE_NAME}-portable ${PACKAGE_NAME} && cd ${PACKAGE_NAME} && git checkout -b build V_8_3_P1
+   git clone https://github.com/${PACKAGE_NAME}/${PACKAGE_NAME}-portable ${PACKAGE_NAME} && \
+   cd ${PACKAGE_NAME} && git checkout -b build V_${PACKAGE_VERSION//./_}_P1
 
 steps:
 - cd ${PACKAGE_NAME} && autoreconf
