--- a/multi-arch/packages/runit/build.yaml
+++ b/multi-arch/packages/runit/build.yaml
@@ -10,6 +10,7 @@ env:
 package_dir: /runit
 prelude:
 - |
+   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    luet install utils/curl && \
    mkdir -p /${PACKAGE_NAME} && \
    mkdir -p /package && \
