init/runit: Bump v.2.1.2+3

--- a/multi-arch/packages/runit/build.yaml
+++ b/multi-arch/packages/runit/build.yaml
@@ -21,4 +21,6 @@ prelude:
 
 
 steps:
-- cd admin/runit-${PACKAGE_VERSION}/src && make && sh install_runit.sh
+- |
+  PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
+  cd admin/runit-${PACKAGE_VERSION}/src && make && sh install_runit.sh
