--- a/multi-arch/packages/yq/build.yaml
+++ b/multi-arch/packages/yq/build.yaml
@@ -12,7 +12,7 @@ steps:
 - | 
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    YQ_ARCH=${MUSL_ARCH} && \
-   YQ_ARCH="${YQ_ARCH/x86-64/amd64}" && \
+   YQ_ARCH="${YQ_ARCH/x86/amd64}" && \
    mkdir -p /${PACKAGE_NAME}/usr/bin && \
    curl -L https://github.com/mikefarah/${PACKAGE_NAME}/releases/download/${PACKAGE_VERSION}/yq_linux_${YQ_ARCH} -o /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME} && \
    chmod +x /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME}
